--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=1920 height=1080 style="width: 1920px; height: 1080px; background: #231F20"></canvas>
-    <script src="Build/FINALNOV15.loader.js"></script>
+    <script src="Build/NO-BACKGROUND-UI.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -18,9 +18,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/FINALNOV15.data",
-        frameworkUrl: "Build/FINALNOV15.framework.js",
-        codeUrl: "Build/FINALNOV15.wasm",
+        dataUrl: "Build/NO-BACKGROUND-UI.data",
+        frameworkUrl: "Build/NO-BACKGROUND-UI.framework.js",
+        codeUrl: "Build/NO-BACKGROUND-UI.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Tweed",
