--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" style="width: 100%; height: 100%; background: #231F20"></canvas>
-    <script src="Build/LEVEL 1 DEMO.loader.js"></script>
+    <script src="Build/LEVEL 1 DEMO Build 2.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -18,9 +18,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/LEVEL 1 DEMO.data",
-        frameworkUrl: "Build/LEVEL 1 DEMO.framework.js",
-        codeUrl: "Build/LEVEL 1 DEMO.wasm",
+        dataUrl: "Build/LEVEL 1 DEMO Build 2.data",
+        frameworkUrl: "Build/LEVEL 1 DEMO Build 2.framework.js",
+        codeUrl: "Build/LEVEL 1 DEMO Build 2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Tweed",
