--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
@@ -8,7 +7,7 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" style="width: 100%; height: 100%; background: #231F20"></canvas>
-    <script src="Build/L1D4.loader.js"></script>
+    <script src="Build/DEC16.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -19,9 +18,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/L1D4.data",
-        frameworkUrl: "Build/L1D4.framework.js",
-        codeUrl: "Build/L1D4.wasm",
+        dataUrl: "Build/DEC16.data",
+        frameworkUrl: "Build/DEC16.framework.js",
+        codeUrl: "Build/DEC16.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Tweed",
